# DADE_KAVI3

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/plagiarism_engine/: cli.py  dataset.py  evaluation.py  lsh.py  minhash.py  preprocessing.py  simhash.py
tests/: test_engine.py
